# BG-Trees

./: .clangd  .gitignore  .hidden  README.md  build.py  pyproject.toml  setup.cfg  setup.py  update-badges.py
.github/workflows/: cd_docs.yml  ci_lint.yml  ci_test_cpu.yml  ci_test_gpu.yml  continuous_integration.yml  cpu_integration.yml  gpu_test.yml  lint.yml
benchmarks/: create_array.py  timing_benchmark.py
bgtrees/: __init__.py  _version.py  currents.py  metric_and_vertices.py  metric_and_verticies.py  phase_space.py  settings.py  states.py  tools.py
bgtrees/finite_gpufields/: __init__.py  finite_fields_tf.py  operations.py
bgtrees/finite_gpufields/cuda_operators/: __init__.py  check_inverse.py  dot_product.cpp  dot_product.cu  dot_product.h  dot_product_op.cpp  makefile  py_dotproduct.py
bgtrees/finite_gpufields/cuda_operators/src/: dot_product.cpp  dot_product.cu  dot_product_op.cpp  inverse.cpp  inverse.cu  inverse.h  inverse_op.cpp
docs/: .buildinfo  bgtrees.finite_gpufields.cuda_operators.html  bgtrees.finite_gpufields.html  bgtrees.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: bgtrees.finite_gpufields.cuda_operators.rst.txt  bgtrees.finite_gpufields.rst.txt  index.rst.txt
example/: Example.ipynb  compute_currents.py
sphinx/source/: bgtrees.rst  conf.py  index.rst  modules.rst
tests/: test_currents.py  test_finite_gpufields.py  test_metric_and_vertices.py  test_metric_and_verticies.py  test_phase_space.py  test_states.py
