[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.0", "tensorflow[and-cuda]<2.16"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "bgtrees"
version = "0.0.0"
description = "Berends-Giele Recursion for Trees on the GPU using Finite Fields"
readme = "README.md"
authors = [
    "J. Cruz-Martinez <juan.cruz.martinez@cern.ch>",
    "G. De Laurentis <giuseppe.delaurentis@ed.ac.uk>",
    "M. Pellen <mathieu.pellen@physik.uni-freiburg.de>"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
license = "GPL-3.0-or-later"
repository = "https://github.com/Amps-GPU/BG-Trees/tree/main"
packages = [
    { include = "bgtrees" },
]
include = [
    # Files ignored by .gitignore need to be explicitly installed
    # The following files are created automaticall by `build.py`
    "bgtrees/finite_gpufields/cuda_operators/*.so",
    "bgtrees/_version.py"
    ]

[tool.poetry.dependencies] 
python = "^3.10"
tensorflow = {version = "<2.16", extras = ["and-cuda"]}
# For testing
galois = {version = "*", optional=true}
pytest = {version = "*", optional=true}
pytest-cov = {version = "*", optional=true}
pyadic = {version = "*", optional=true}
# For notebooks
lips = {version = "*", optional=true}
jupyterlab = {version = "*", optional=true}

[tool.poetry.extras]
tests = ["pytest", "galois", "pyadic", "pytest-cov"]
notebooks = ["jupyterlab", "lips"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = true
dirty = true
semver = true
pattern = "default-unprefixed" # if we don't use v in the tags

[tool.poetry-dynamic-versioning.files."bgtrees/_version.py"]
persistent-substitution = true
initial-content = """
__version__ = "0.0.0"
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["bgtrees/_version.py"]

# This is an undocumented/unsupported feature of poetry, so fingers crossed
[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.flake8]
ignore = ["E741", "W504", "W503"]
max-line-length = 120

[tool.black]
line-length = 120
skip_magic_trailing_comma = true

[tool.isort]
atomic = true
line_length = 120
profile = "black" # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#custom-configuration
skip_gitignore = true
known_first_party = ["bgtrees"]
force_sort_within_sections = true

[tool.pytest.ini_options]
addopts = "-rs --verbose --cov=bgtrees"
testpaths = ["tests"]
